tests/errors/semantic/blocking/UPDATE_SET_INCOMPATIBLE_TYPES_1.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {1.4, 6.2, 8.1}
a.update({3j})
